force-app/main/default/objects/Vehicle__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Location</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipLabel>Vehicles (Current Location)</relationshipLabel>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>