force-app/main/default/objects/Vehicle__c/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Location</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>