force-app/main/default/objects/Vehicle__c/fields/Last_Departure__c.field-meta.xml
<CustomField>
    <fullName>Last_Departure__c</fullName>
    <label>Last Departure</label>
    <type>Date</type>
</CustomField>