force-app/main/default/objects/Vehicle__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <formula>IF (Current_Location__c = Origin_Location__c, &quot;Vehicle is Home&quot;, &quot;Vehicle is Away&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message</label>
    <type>Text</type>
</CustomField>