force-app/main/default/objects/Vehicle__c/fields/Origin_Location__c.field-meta.xml
<CustomField>
    <fullName>Origin_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Location</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipLabel>Vehicles (Origin Location)</relationshipLabel>
    <relationshipName>Vehicles2</relationshipName>
    <type>Lookup</type>
</CustomField>